<resources>
    <string name="app_name">ifPizzaApp</string>
    <string name="LOGIN">Inicio </string>
    <string name="bienvenido">Bienvenido/a</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="olvido_contra">¿Ha olvidado su contraseña?</string>
    <string name="registrarse">Registrarse</string>
    <string name="favs">FAVORITOS</string>
    <string name="nombre_usuario">Usuario</string>
    <string name="correo">user@gmail.com</string>
    <string name="telefono">7596-5484</string>
    <string name="edit_perfil">Editar perfil</string>
    <string name="direccion">Direcciones</string>
    <string name="mi_billetera">Mi billetera</string>
    <string name="cambiar_contra">Cambiar contraseña</string>
    <string name="historial_pedidos">Historial pedidos</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="nom_pizza">Pizza margarita</string>
    <string name="nom_categoria">Pizza</string>
    <string name="precio">$10.00</string>
    <string name="name_app">IF PIZZA</string>
    <string name="nomBien">Bienvenido usuario/a</string>
    <string name="nomUser">Bienvenido usuario/a</string>
    <string name="Cat">Categorías</string>
    <string name="Populares">Populares</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>