<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_verde"
    tools:context=".MenuUsuario">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imgMenuUsuario"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/user1"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="1dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#08510B"
        app:civ_shadow_radius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/whitecardview"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMenuUsuario">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvUsuarioMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/nombre_usuario"
                android:textAlignment="center"
                android:textColor="@color/fondo_verde"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txvCorreoMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/correo"
                android:textAlignment="center"
                android:textColor="@color/fondo_verde"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txvTelefonoMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/telefono"
                android:textAlignment="center"
                android:textColor="@color/fondo_verde"
                android:textSize="18sp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollMenuUsuario"
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEditarPerfil"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/edit_perfil"
                    android:textAllCaps="false"
                    android:textColor="@color/verde_claro"
                    android:textSize="25dp"
                    app:cornerRadius="8dp"
                    app:elevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnIniciarSesion" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDirecciones"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/direccion"
                    android:textAllCaps="false"
                    android:textColor="@color/verde_claro"
                    android:textSize="25dp"
                    app:cornerRadius="8dp"
                    app:elevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnIniciarSesion" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCamContra"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/cambiar_contra"
                    android:textAllCaps="false"
                    android:textColor="@color/verde_claro"
                    android:textSize="25dp"
                    app:cornerRadius="8dp"
                    app:elevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnIniciarSesion" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCerrarSesion"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/cerrar_sesion"
                    android:textAllCaps="false"
                    android:textColor="@color/verde_claro"
                    android:textSize="25dp"
                    app:cornerRadius="8dp"
                    app:elevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnIniciarSesion" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>