<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewFavoritos"
        android:layout_width="390dp"
        android:layout_height="160dp"
        android:layout_marginTop="28dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgItemFavoritos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txvNombreItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_pizza"
            android:textSize="25sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:layout_marginStart="155dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txvCategoriaItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_categoria"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:layout_marginStart="155dp"
            android:layout_marginTop="45dp"/>

        <TextView
            android:id="@+id/txvPrecioItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio"
            android:textSize="25sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:layout_marginStart="155dp"
            android:layout_marginTop="110dp"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/imgCorazon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/gusta"
            android:layout_marginStart="355dp"
            android:layout_marginTop="15dp"/>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>