<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_verde"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imgLogoLogin"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/logoifpizzapng"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/whitecardview"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txvEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:hint="Digite su email"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDigiteEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txvContra"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:hint="Digite su contraseña">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDigiteClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/fondo_verde"
            android:fontFamily="sans-serif-black"
            android:text="@string/inicio_sesion"
            android:textAllCaps="false"
            app:cornerRadius="8dp"
            app:elevation="20dp"
            app:layout_constraintTop_toBottomOf="@id/txvContra" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrarseLogin"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/registrarse"
            android:textAllCaps="false"
            android:textColor="@color/fondo_verde"
            app:cornerRadius="8dp"
            app:elevation="10dp"
            app:layout_constraintTop_toBottomOf="@id/btnIniciarSesion" />

        <TextView
            android:id="@+id/txvOlvidoContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/olvido_contra"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>